<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_organizer_event_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrganizerEventListFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/allEventsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:minWidth="0dp"
        android:minHeight="0dp"
...
        android:paddingTop="10dp"
        android:paddingEnd="30dp"
        android:paddingBottom="10dp"
        android:text="@string/my_events"
        android:textAllCaps="false"
        android:textColor="@color/button_text_color"
        app:layout_constraintBottom_toTopOf="@+id/allEventsList"
        app:layout_constraintEnd_toStartOf="@+id/pastEventsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pastEventsButton"
        android:layout_width="wrap_content"
...
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:inputType="text"
            android:hint="@string/event_search_hint"
            android:textSize="16sp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allEventsButton" />

    <ListView
        android:id="@+id/searchEventsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/allEventsList"
        tools:visibility="invisible" />

    <ListView
        android:id="@+id/pastEventsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
