<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_organizer_create_event">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

...
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:textColorHint="@color/hint_color"
            android:minEms="10"
            android:maxEms="10">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/organizer_fragment_create_event_p1_edit_name_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/organizer_fragment_create_event_p1_name_hint"
                android:inputType="textShortMessage"
                android:textSize="20sp"
                />
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/location_picker_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/organizer_fragment_create_event_p1_edit_location_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/organizer_fragment_create_event_p1_location_hint"
                    android:inputType="textShortMessage"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>
...
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/map_48px" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/organizer_fragment_create_event_p1_edit_startDateTime_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:background="@drawable/button_background"
            android:textColor="@color/button_text_color"
            android:text="@string/organizer_fragment_create_event_p1_startTime_hint"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/organizer_fragment_create_event_p1_edit_endDateTime_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:text="@string/organizer_fragment_create_event_p1_endTime_hint"
...
            android:hint="@string/organizer_fragment_create_event_p1_limitSignUps_hint"
            android:inputType="number"
            android:textSize="20sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/organizer_fragment_create_event_p1_edit_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:background="@android:color/transparent"
...
