...
                    android:layout_weight="1"
                    android:textSize="18sp"
                    app:buttonTint="@color/main_color"
                    android:text="@string/auto_generate" />

                <RadioButton
                    android:id="@+id/upload_button_checkin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    app:buttonTint="@color/main_color"
...
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/promo_qr_settings_header">

                <RadioButton
                    android:id="@+id/autogenerate_button_promo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    app:buttonTint="@color/main_color"
                    android:text="@string/auto_generate" />

                <RadioButton
                    android:id="@+id/upload_button_promo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:buttonTint="@color/main_color"
                    android:textSize="18sp"
...
                android:layout_marginBottom="24dp"
                android:background="@color/light_grey"
                android:padding="5sp"
                android:text="@string/upload_qr_code_header"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/organizer_create_event_complete_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/promo_uri_placeholder_text" />

            <TextView
                android:id="@+id/promo_uri_placeholder_text"
...
