...
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrganizerProfileFragment"
    android:id="@+id/fragment_organizer_profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/editOrganizerProfileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".OrganizerProfileFragment">
...
            android:minEms="15"
            android:maxEms="15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_organizer_display_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/display_name"
                android:inputType="text"
                android:maxLength="100"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/organizer_info_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            android:text="@android:string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/organizer_info_save_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_organizer_display_name_layout"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/organizer_info_save_button"
...
